complete security setting

--- a/MyMobilesafe/app/src/main/AndroidManifest.xml
+++ b/MyMobilesafe/app/src/main/AndroidManifest.xml
@@ -51,7 +51,20 @@
         <service
             android:name=".security.service.MyGPSService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true">
+        </service>
+
+        <receiver
+            android:name=".security.receiver.MyAdmin"
+            android:label="@string/sample_device_admin"
+            android:description="@string/sample_device_admin_description"
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
+            <meta-data android:name="android.app.device_admin"
+                android:resource="@xml/device_admin_sample" />
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
