--- a/MyMobilesafe/app/src/main/AndroidManifest.xml
+++ b/MyMobilesafe/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".home.SplashActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".home.HomeActivity" />
         <activity android:name=".setting.SettingActivity" />
         <activity android:name=".security.SecurityMainActivity" />
         <activity android:name=".security.SecuritySetting1Activity" />
@@ -36,6 +39,8 @@
         <activity android:name=".security.SecuritySetting3Activity" />
         <activity android:name=".security.SecuritySetting4Activity" />
         <activity android:name=".security.SelectContactActivity" />
+        <activity android:name=".hightools.SearchPhoneAreaActivity" />
+        <activity android:name=".hightools.HighToolsMainActivity" />
 
         <receiver android:name=".security.receiver.BootComplete">
             <intent-filter>
@@ -51,20 +56,26 @@
         <service
             android:name=".security.service.MyGPSService"
             android:enabled="true"
-            android:exported="true">
-        </service>
+            android:exported="true" />
 
         <receiver
             android:name=".security.receiver.MyAdmin"
-            android:label="@string/sample_device_admin"
             android:description="@string/sample_device_admin_description"
+            android:label="@string/sample_device_admin"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
-            <meta-data android:name="android.app.device_admin"
+            <meta-data
+                android:name="android.app.device_admin"
                 android:resource="@xml/device_admin_sample" />
+
             <intent-filter>
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name=".setting.MyCallListenerService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
