增加新功能，忽略无用文件

--- a/MyMobilesafe/.gitignore
+++ b/MyMobilesafe/.gitignore
@@ -1,8 +1,17 @@
+#所有的
 *.iml
-.gradle
+*.apk
+*.ap_
+*.dex
+*.class
+#忽略当前目录下
+/.gradle
+/.idea
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
 /build
 /captures
+#忽略掉bin文件gen文件和bin目录gen目录
+bin
+gen
+#忽略掉app目录下的build目录
+/app/build
