--- a/MyMobilesafe/app/src/main/AndroidManifest.xml
+++ b/MyMobilesafe/app/src/main/AndroidManifest.xml
@@ -43,8 +43,7 @@
         <activity android:name=".hightools.SearchPhoneAreaActivity" />
         <activity android:name=".hightools.HighToolsMainActivity" />
         <activity android:name=".appManage.AppManagerActivity" />
-        <activity android:name=".taskmanage.TaskManagerActivity"></activity>
-
+        <activity android:name=".taskmanage.TaskManagerActivity" />
 
         <receiver android:name=".security.receiver.BootComplete">
             <intent-filter>
@@ -81,7 +80,7 @@
             android:enabled="true"
             android:exported="true" />
 
-
+        <activity android:name=".hightools.BaiduLocation"></activity>
     </application>
 
 </manifest>
