--- a/MyMobilesafe/app/src/main/AndroidManifest.xml
+++ b/MyMobilesafe/app/src/main/AndroidManifest.xml
@@ -17,12 +17,37 @@
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+
+    <!-- 这个权限用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <!-- 这个权限用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <!-- 用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <!-- SD卡读取权限，用户写入离线定位数据-->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyCustomTheme">
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="GBqNouoZylPqcvaCxuWMj5wGFufVDPxd" />       //key:开发者申请的Key
+
         <activity
             android:name=".home.SplashActivity"
             android:theme="@style/AppTheme">
@@ -56,10 +81,15 @@
             </intent-filter>
         </receiver>
 
+
         <service
             android:name=".security.service.MyGPSService"
             android:enabled="true"
             android:exported="true" />
+
+        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote">
+        </service>
+
 
         <receiver
             android:name=".security.receiver.MyAdmin"
@@ -80,7 +110,7 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".hightools.BaiduLocation"></activity>
+        <activity android:name=".hightools.baidulLocation.BaiduLocation"></activity>
     </application>
 
 </manifest>
