--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 *.ap_
 *.dex
 *.class
-#忽略当前目录下
-/local.properties
-/captures
+./MyMobilesafe/local.properties
 #忽略掉bin文件gen文件和bin目录gen目录
 build
 .gradle
